add search route for users
