# src/docs/swagger-output.json
@@ -707,6 +707,16 @@
         }
       }
     },
+    "/users/search": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/users/{id}": {
       "get": {
         "tags": [
